# iochat

./: CMakeLists.txt  bubble_frame.cpp  bubble_frame.h  chat_item_base.cpp  chat_item_base.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserlist.ui  chatuserwidget.cpp  chatuserwidget.h  chatuserwidget.ui  chatview.cpp  chatview.h  chatview.ui  clicked_label.cpp  clicked_label.h  clickedbtn.cpp  clickedbtn.h  clickedbtn.ui  config.ini  customizeedit.cpp  customizeedit.h  customizeedit.ui  global.cpp  global.h  httpmgr.cpp  httpmgr.h  list_item_base.cpp  list_item_base.h  loadingdialog.cpp  loadingdialog.h  loadingdialog.ui  logindialog.cpp  logindialog.h  (+34 more)
res/: icon.rc
style/: stylesheet.qss
